Fix layout on mobile devices

--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -1,5 +1,7 @@
 .App {
-
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
