--- a/src/app/components/Results.css
+++ b/src/app/components/Results.css
@@ -1,4 +1,4 @@
 .Results {
   text-align: center;
-  height: calc(100vh - 75px);
+  height: calc(100% - 75px);
 }
